[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Menus/show-int.png" type="Texture" id=1]
[ext_resource path="res://Src/Menu/BtnFocus.gd" type="Script" id=2]

[node name="BtnFocus" type="TextureButton"]
margin_right = 48.0
margin_bottom = 18.0
mouse_default_cursor_shape = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="enter" type="Sprite" parent="."]
visible = false
position = Vector2( -18, 10 )
texture = ExtResource( 1 )
[connection signal="focus_entered" from="." to="." method="_on_BtnFocus_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_BtnFocus_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_BtnFocus_mouse_entered"]
